# pyagnps

./: .gitignore  README.md  environment.yml  environment2.yml  install_gdal.py  license  pyproject.toml  requirements.txt  requirements3.txt  requirements_final.txt
docs/cli/: NLDAS-2.md
inputs/climate/: lmrb.csv
inputs/management/: AnnAGNPS_Management_Field_Data.csv  CDL_All_Codes.csv  CDL_Field_ID_dictionary.csv  CDL_codes_names_colors.csv
inputs/thucs/: lmrb.csv  test.csv
inputs/topagnps/: AnnAGNPS_Cell_Data_Section.csv  AnnAGNPS_Reach_Data_Section.csv  AnnAGNPS_Reach_IDs.PRJ
notebooks/: sandbox.ipynb
notebooks/abandoned_avenues/: process_hydrodem.ipynb
notebooks/aims/: aims_count_cells_reaches.ipynb  aims_watershed_query.ipynb  aims_watershed_query.py  aims_watershed_query_OO.ipynb  files_generation.ipynb  test_climate_db_query.ipynb
notebooks/annagnps/: fragment_annagnps_into_mini_watersheds.ipynb  fragment_annagnps_into_mini_watersheds_multiprocessing.py  post_process_annagnps_outputs.ipynb  subannagnps.ipynb
notebooks/bash_scripts/: release_requeue.sh
notebooks/climate/: climate.html  compare_cmip5_nldas2_data.ipynb  populate_nldas2_data_rods_to_db.ipynb  query_and_populate_nldas2_to_db.ipynb  query_and_populate_nldas2_to_db.py  read_cmip6.ipynb  test_1_read_cmip6.ipynb  test_annagnps_climate.ipynb  test_climate_from_aggregated_nldas.ipynb  test_climate_from_cmip5_maca_files.ipynb  test_climate_from_cmip6.ipynb  test_climate_from_cmip6_files.ipynb  test_climate_from_cmip6_opendap.ipynb  test_nldas_aggregate_timezone.ipynb  test_nldas_opendap.ipynb
notebooks/files_management/: check_quality_control_vs_runs.ipynb  delete_failed_thucs_except.py  delete_thuc_soil_directories.ipynb  fix_missing_prj.ipynb
notebooks/management_annagnps/: create_dictionary_color_palette_CDL.ipynb  fix_database_management_from_CDL.ipynb  fix_database_management_from_CDL.py  populate_database_management_from_CDL.ipynb  populate_database_management_from_CDL.py  populate_database_management_tables.ipynb  rename_batch_database_mgmt_field_ids_classes.ipynb
notebooks/plots/: sankey_diagram_soil_sources_and_process.ipynb
notebooks/postgresql/: db_easy_query.ipynb  populate_database_soil_data.ipynb  test_db_connection_safer.ipynb
notebooks/soil/: assign_mukey_to_cells_db_plurality.ipynb  assign_soil_data.ipynb  create_annagnps_soil_data_and_soil_data_layers.ipynb  create_annagnps_soil_data_and_soil_data_layers_ALL_SOURCES_COMBINED.ipynb  create_annagnps_soil_data_and_soil_data_layers_ALL_SOURCES_COMBINED_and_NITA_rejects.ipynb  flag_soil_id_not_valid_all_thucs.py  gNATSGO_annagnps_query_exploration_rvindicator.ipynb  populate_database_soil_data.ipynb  run_NITA_ALL_SOURCES_COMBINED.ipynb  soil_data_market_NITA.py  soil_gNATSGO_db_population_batch_multinode_fill_holes.py  soil_shapefile_download.ipynb  soil_ssurgo_db_population_batch_multinode.py  soil_ssurgo_db_population_batch_multinode_gSSURGO_method.py  soil_ssurgo_db_population_batch_multinode_sdm_download.py  survey_cells_not_populated.ipynb  survey_cells_not_populated_script.py  survey_quality_control_cells_populated_soil_id_exists.ipynb  survey_quality_control_cells_populated_soil_id_exists.py  test_gssurgo_soil_population.ipynb  zonal_stats_soil.ipynb
notebooks/topagnps/: compute_thuc_quality_control.ipynb  polygonize_cells_and_reaches.ipynb  restart_arrested_full_topagnps.py  thuc_delineation_coverage_process_simple.ipynb  thuc_outlet_verification.ipynb  thuc_topagnps_batch_multinode.py  thuc_topagnps_batch_multinode_custom.py  thuc_topagnps_batch_multinode_slower_with_RELIEF.py  thuc_topagnps_batch_mutlinode.py  thuc_topagnps_batch_mutlinode_custom.py  topagnps_outlet_identification.ipynb  topagnps_sequence.ipynb  topagnps_sequence_wbd.ipynb
outputs/climate/: climate_daily.csv  climate_station.csv
outputs/shapefiles/: AnnAGNPS_Cell_IDs.dbf  AnnAGNPS_Cell_IDs.shp  AnnAGNPS_Cell_IDs.shx  AnnAGNPS_Reach_IDs.dbf  AnnAGNPS_Reach_IDs.shp  AnnAGNPS_Reach_IDs.shx
outputs/soil/: AnnAGNPS_Combined_Group_1_Soil_Data.csv  OH011_nasis.csv
outputs/soil_MS107/: MS107_nasis.csv  MS107_nasis_soil_layers_data.csv  NITA_CONTROL.csv
outputs/subannagnps/: AnnAGNPS_Cell_Data_Section.csv  AnnAGNPS_Cell_IDs.dbf  AnnAGNPS_Cell_IDs.shp  AnnAGNPS_Cell_IDs_shp.shx  AnnAGNPS_Reach_Data_Section.csv  AnnAGNPS_Reach_IDs.dbf  AnnAGNPS_Reach_IDs_shp.shp  AnnAGNPS_Reach_IDs_shp.shx
src/: soil_data_market_query.py
src/cli/: aggregate_and_generate_climate_data_timezone_option.py  aggregate_daily_timezone_claude.py  aggregate_nldas_batch_daily.py  aggregate_nldas_batch_daily_slurm.py  generate_daily_aggregated_nldas2_file_data_rod.py  get_nldas_batch.py  populate_daily_aggregated_nldas2_to_db.py
src/notebooks/: assign_soil_data.ipynb  fix_missing_prj.ipynb  polygonize_cells_and_reaches.ipynb  process_hydrodem.ipynb  soil_data_market_NITA.py  soil_shapefile_download.ipynb  subannagnps.ipynb  thuc_delineation_coverage_process_simple.ipynb  thuc_quality_control.ipynb  thuc_topagnps_batch.py  thuc_topagnps_batch_aims.py  thuc_topagnps_batch_mutlinode.py  topagnps_outlet_identification.ipynb  topagnps_sequence.ipynb  zonal_stats_soil.ipynb
src/pyagnps/: __init__.py  aims.py  annagnps.py  (+7 more)
(+107 files in other folders)
