[tool.pdm]
src-layout = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "nbformat>=5.8.0",
    "ipykernel>=6.22.0",
    "pydap>=3.4.1",
]
[project]
name = "pyagnps"
version = "0.1.0"
description = "A toolbox to manipulate data from and for USDA tools AnnAGNPS, TopAGNPS, etc. and their associated datasets e.g. soil, climate etc."
authors = [
    {name = "Luc Rébillout", email = "luc@ncche.olemiss.edu"},
]
dependencies = [
    "tqdm>=4.65.0",
    "Shapely>=2.0.1",
    "rioxarray>=0.14.1",
    "Requests>=2.29.0",
    "rasterio>=1.3.6",
    "py3dep>=0.14.0",
    "pandas>=2.0.1",
    "numpy>=1.24.3",
    "networkx>=3.1",
    "lxml>=4.9.2",
    "geopandas>=0.12.2",
    "psycopg2-binary>=2.9.6",
    "sqlalchemy>=2.0.12",
    "matplotlib>=3.7.1",
    "rasterstats>=0.18.0",
    "folium>=0.14.0",
    "mapclassify>=2.5.0",
    "pyarrow>=12.0.1",
    "pyogrio>=0.6.0",
    "fastparquet>=2023.7.0",
    "holoviews>=1.17.1",
    "hvplot>=0.8.4",
    "selenium>=4.10.0",
    "pynldas2>=0.15.1",
    "pydaymet>=0.15.1",
    "timezonefinder>=6.2.0",
    "jupyter-bokeh>=3.0.7",
    "pooch>=1.7.0",
    "nc-time-axis>=1.4.1",
    "dask[distributed]>=2024.7.0",
    "dask[dataframe]>=2024.7.0",
    "xarray>=2023.9.0",
    "psycopg2>=2.9.6 ; sys_platform == 'win32'",
    "geoalchemy2>=0.15.1",
    "bottleneck>=1.4.0",
    "dask-jobqueue>=0.8.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
download-nldas2 = "cli.get_nldas_batch:main"
aggregate-nldas2 = "cli.aggregate_nldas_batch_daily:cli_call"
populate-nldas2-daily-db = "cli.populate_daily_aggregated_nldas2_to_db:cli_call"
generate-nldas2-rod = "cli.generate_daily_aggregated_nldas2_file_data_rod:cli_call"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"